--- a/src/styles/custom-base-styles.scss
+++ b/src/styles/custom-base-styles.scss
@@ -2,6 +2,7 @@
 
 html,
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: theme('fonts.body'), sans-serif;
@@ -9,7 +10,6 @@ body {
 
 pre, code { 
   font-family: theme('fonts.mono'), monospace;
-
 }
 
 :root {
