feat(colors): update grey colors
monochromatic now instead of from tailwind

--- a/docs/docs.styles.scss
+++ b/docs/docs.styles.scss
@@ -308,7 +308,7 @@ div[class^="rsg--tab"] {
   .vueds-tabs {
     z-index: 5;
     border-radius: theme('borderRadius.sm');
-    box-shadow: 0 2px 8px theme('colors.gray.800');
+    box-shadow: 0 2px 8px theme('colors.grey.800');
     overflow: hidden;
     position: absolute;
     top: theme('spacing.6');
@@ -413,7 +413,7 @@ div[class^="rsg--root"] div[class^="rsg--tabs"] {
   align-self: flex-end;
   cursor: help;
   line-height: theme('lineHeight.none');
-  background: theme('colors.gray.600');
+  background: theme('colors.grey.600');
   padding: theme('spacing.2') theme('spacing.4') theme('spacing.2')/1.2;
   text-transform: uppercase;
   letter-spacing: 1px;
