--- a/docs/docs.styles.scss
+++ b/docs/docs.styles.scss
@@ -304,6 +304,7 @@ pre[class^="rsg--pre"],
 
 // VUE & HTML Code tabs
 div[class^="rsg--tab"] {
+  margin-top: theme('spacing.6');
   position: relative;
   .vueds-tabs {
     z-index: 5;
@@ -452,15 +453,6 @@ div[class^="rsg--root"] div[class^="rsg--tabs"] {
 
 /* TABLES
 --------------------------------------------- */
-
-// Global tr setting so that vueds custom components use this as well
-tr {
-  transition: background-color 0.1s ease;
-  &:hover {
-    background: theme('colors.light');
-  }
-}
-
 table[class^="rsg--table"] {
   border-collapse: collapse;
   border-spacing: 0;
