--- a/src/styles/bulma-template.scss
+++ b/src/styles/bulma-template.scss
@@ -17,8 +17,8 @@
 // $success: $color-green-500;
 // $warning: $color-orange-600;
 // $danger: $color-red-500;
-// $color-dark: $color-dark;
-// $text: $color-dark;
+// $color-blue-dark: $color-blue-dark;
+// $text: $color-blue-dark;
 
 // @import "~bulma/sass/utilities/_all.sass";
 // @import "~bulma/sass/base/_all.sass";
