--- a/docs/docs.styles.scss
+++ b/docs/docs.styles.scss
@@ -101,7 +101,7 @@ p[class^="rsg--version"] {
 
 // Sidebar search
 div[class^="rsg--search"] input[class^="rsg--input"] {
-  border-radius: theme('borderRadius.lg');
+  border-radius: 4px;
   padding: theme('spacing.2') theme('spacing.3');
   color: var(--nav-color-active);
   border: 1px solid theme('colors.grey-dark');
