--- a/src/styles/custom-base-styles.scss
+++ b/src/styles/custom-base-styles.scss
@@ -5,11 +5,11 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: theme('fonts.body'), sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
-pre, code { 
-  font-family: theme('fonts.mono'), monospace;
+pre, code, .font-mono { 
+  font-variant: common-ligatures tabular-nums;
 }
 
 :root {
